Fix overflowing text within new-tweet container using overflow-wrap

--- a/public/styles/display-tweet.css
+++ b/public/styles/display-tweet.css
@@ -46,6 +46,7 @@ article header output {
 
 article label {
   padding: 1em;
+  overflow-wrap:break-word;
 }
 
 article footer {
